<resources>
    <string name="app_name">Payme Host</string>

    <!-- login -->
    <string name="label_login">Login</string>
    <string name="label_name">Name</string>

    <!-- home -->
    <string name="label_player_id">PlayerID</string>
    <string name="label_receiver_id">ReceiverID</string>
    <string name="label_amount">Amount</string>
    <string name="label_get_token">Get Token</string>
    <string name="label_launch_game">Launch Game</string>

    <string name="verify_get_token_fail">Please fill in receiverId, amount.</string>

    <string name="label_show_all">Show all</string>
    <string name="label_spin">Spin</string>
    <string name="label_pending_transaction">Pending Transaction</string>
    <string name="label_ok">OK</string>
    <string name="title_activity_pending_transaction">PendingTransactionActivity</string>

    <string name="label_choose_action">Choose Actions</string>
    <string name="reject_tran">Reject Transaction</string>
    <string name="confirm_tran">Confirm Transaction</string>
    <string name="double_check_tran">Double Check Transaction</string>

    <string name="loading">Loading</string>

</resources>
