<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainRootRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_player_id" />

            <EditText
                android:id="@+id/playerId_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/label_receiver_id" />


            <EditText
                android:id="@+id/receiverId_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/label_amount" />

            <EditText
                android:id="@+id/amount_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/get_token_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/color_button_get_token"
                android:textColor="@color/white"
                android:text="@string/label_get_token"/>

            <Button
                android:id="@+id/launch_game_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_launch_game"
                android:layout_gravity="right|bottom"
                android:layout_margin="@dimen/activity_margin"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>